fix sizing issue on tablet and mobile-- version 1.0 complete

--- a/swipe_project/styles.css
+++ b/swipe_project/styles.css
@@ -806,6 +806,15 @@ p {
     .hero .col-right {
         width: 40%;
     }
+
+    /* Partners Grid */
+    .partners-section {
+        margin: -60px 0 0 0;
+    }
+
+    .partners-grid {
+        margin: 0 0 var(--spacing-xl) 0;
+    }
 }
 
 /* 850 Custom Breakpoint */
@@ -896,6 +905,12 @@ p {
         height: 450px;
         transform: translate(32px, -32px);
     }
+
+    /* Partners Grid */
+    .partners-section {
+        margin: -20px 0 0 0;
+    }
+    
 
     /* Unified Platform Section */
     .unified-platform-section h2 {
@@ -988,7 +1003,11 @@ p {
     main {
         margin: var(--spacing-lg) 0 0 0;
     }
-
+    
+    /* Partners Grid */
+    .partners-section {
+        margin: var(--spacing-xl) 0 var(--spacing-sm) 0;
+    }
     .partners-grid {
         grid-template-columns: 1fr 1fr;
     }
